tests/suite/snapshots/suite__parse__tests__parse__bad_neg_maxint.xi.snap
---
source: tests/suite/parse.rs
expression: Snapshot(program)
---
Error: Syntactic error
   ╭─[tests/parse/bad_neg_maxint.xi:2:9]
   │
 2 │     x = -999999999999999999999999999999999999999999999999999999999999999999
   ·         ─────────────────────────────────┬─────────────────────────────────  
   ·                                          ╰─────────────────────────────────── Invalid integer literal
───╯

